2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Merged fix for SF Bug #459646 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #439042 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

	* Merged fix for SF Bug #418892 into the HEAD (The source of the
	  patch is "expect-sf418892-sf439042-branch").

2002-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.c: Applied patch by Don Libes fixing improper
	  internationalization.

2002-02-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.man: Changed the paragraph about [exp_continue] to
	  contain information about the flag "-continue_timer". This fixes
	  the bug SF #520630.

2002-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.man: Changed abbreviation of "-notransfer" from "-n" to
	  "-not". "-n" is no longer unique due to the addition of
	  "-nocase". This fixes the bug SF #514994.

2002-02-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Applied patch for SF #514590 to correct behaviour of expect when
	  expecting and send from and to bogus spawn id's.

2002-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Resynchronization of SourceForge with Don's sources to Expect
	  version 5.34. The changes are

	  Don Porter <don.porter@nist.gov> provided package-related fixes
	  for test suite.

	  Brian Theado <brian.theado@usa.net> noted that interact's -re
	  support broke when offsets kicked in.  Turned out that the
	  regexp engine supports them during execution but the results are
	  delivered RELATIVE to the offset.  (I suspect this was done
	  due to expediency.)

2001-12-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_inter.c: Applied patch posted by Don libes to c.l.t. on his
	  behalf to keep the SF repository in sync with his changes. Don's